# dump-rs-1

./: .env.example  Cargo.toml  Dockerfile.dev  Dockerfile.ecs  Dockerfile.lambda
src/: config.rs  handler.rs  main.rs
