[package]
name = "ryanz-2"
version = "0.1.0"
edition = "2021"

[features]
lambda = []
ecs = []
headless = []

[dependencies]
tower = { version = "0.4" }
thirtyfour = "0.31"
tokio = { version = "1", features = ["full"] }
regex = "1"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
futures = "0.3.30"
axum = { version = "0.7.2", features = ["macros", "http2", "tracing"] }
axum-aws-lambda = "0.6.0"
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
tower-service = "0.3"
tower-http = { version = "0.5", features = [
    "cors",
    "trace",
    "compression-gzip",
    "compression-deflate",
] }
scraper = "0.19.0"
hyper = "1.0.1"
clap = { version = "4", features = ["env", "derive"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
anyhow = { version = "1.0.80", features = ["backtrace"] }
uuid = { version = "1", features = ["serde", "v4"] }
itertools = "0.12"
tryhard = "0.5.1"
serde_with = "3.7.0"

[target.'cfg(target_env = "musl")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
